--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link href="./output.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="fonts/fonts.css">
     <title>Vite + Vue</title>
   </head>
-  <body>
+  <body class="bg-black text-white font-montserrat mx-6">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
