--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="fonts/fonts.css">
     <title>Vite + Vue</title>
   </head>
-  <body class="bg-black text-white font-montserrat mx-6">
+  <body class="bg-black text-white font-montserrat">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
