Refactor codebase to allow animations + fixed stylings

--- a/index.html
+++ b/index.html
@@ -2,13 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <meta property="og:url" content="https://tami.brimble.app/#contact">
+    <link rel="canonical" href="https://tami.brimble.app/#contact">
+    <meta name="twitter:image" content="https://tami.brimble.app/meta-image.png">
+    <meta name="twitter:description" content="Software Engineer">
+    <meta name="twitter:title" content="Tammy Alemu | Software Developer ">
+    <meta name="twitter:description" content="Software Developer">
+    <meta name="twitter:site" content="@tammyalemu">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="keyword" content="Tammy Alemu, Software Developer, Software Engineer, Frontend Developer, Backend Developer, Fullstack Developer, Web Developer, React Developer, JavaScript Developer">
+    <meta name="description" content="Tammy Alemu | Software Developer">
+    <meta name="author" content="Tammy Alemu">
+    <meta name="theme-color" content="#75FB4C">
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#75FB4C">
+    <meta name="theme-color" media="(prefers-color-scheme: no-preference)" content="#75FB4C">
+    <link rel="manifest" href="/site.webmanifest">
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="fonts/fonts.css">
-    <title>Vite + Vue</title>
+    <title>Software Developer</title>
   </head>
-  <body class="bg-black text-white font-montserrat">
+  <body class="bg-black text-white font-montserrat scroll-smooth">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
