--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
     <link rel="manifest" href="/site.webmanifest">
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.1/dist/lenis.css">
     <title>Software Developer</title>
   </head>
-  <body class="bg-black text-white font-montserrat scroll-smooth">
+  <body class="bg-black text-white font-montserrat">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
+
+  <style>
+    html{
+      scroll-behavior:calc(-200);
+    }
+  </style>
 </html>
