--- a/index.html
+++ b/index.html
@@ -1,40 +1,75 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <meta property="og:url" content="https://tami.brimble.app/#contact">
-    <link rel="canonical" href="https://tami.brimble.app/#contact">
-    <meta name="twitter:image" content="https://tami.brimble.app/meta-image.png">
-    <meta name="twitter:description" content="Software Engineer">
-    <meta name="twitter:title" content="Tammy Alemu | Software Developer ">
-    <meta name="twitter:description" content="Software Developer">
-    <meta name="twitter:site" content="@tammyalemu">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="keyword" content="Tammy Alemu, Software Developer, Software Engineer, Frontend Developer, Backend Developer, Fullstack Developer, Web Developer, React Developer, JavaScript Developer">
-    <meta name="description" content="Tammy Alemu | Software Developer">
-    <meta name="author" content="Tammy Alemu">
-    <meta name="theme-color" content="#75FB4C">
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#75FB4C">
-    <meta name="theme-color" media="(prefers-color-scheme: no-preference)" content="#75FB4C">
-    <link rel="manifest" href="/site.webmanifest">
-    <link href="style.css" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/fonts.css">
-    <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.1/dist/lenis.css">
-    <title>Software Developer</title>
-  </head>
-  <body class="bg-black text-white font-montserrat">
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <style>
-    html{
-      scroll-behavior:calc(-200);
+  <!-- Favicon and Theme -->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <meta name="theme-color" content="#75FB4C" />
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#75FB4C">
+  <meta name="theme-color" media="(prefers-color-scheme: no-preference)" content="#75FB4C">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Canonical and Open Graph -->
+  <meta property="og:url" content="https://tami.brimble.app/#contact">
+  <link rel="canonical" href="https://tami.brimble.app/#contact">
+  <meta property="og:title" content="Tamarankuro 'Tammy' Alemu | Software Developer Portfolio" />
+  <meta property="og:description" content="Fullstack developer specializing in web and backend development. View Tammy Alemu’s projects and contact info." />
+  <meta property="og:image" content="https://tami.brimble.app/meta-image.png" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@tammyalemu">
+  <meta name="twitter:title" content="Tamarankuro 'Tammy' Alemu | Software Developer Portfolio">
+  <meta name="twitter:description" content="Explore the portfolio of Tammy Alemu – Fullstack Software Engineer skilled in backend, frontend, and scalable systems.">
+  <meta name="twitter:image" content="https://tami.brimble.app/meta-image.png">
+
+  <!-- SEO -->
+  <title>Tamarankuro "Tammy" Alemu | Software Engineer & Web Developer Portfolio</title>
+  <meta name="description" content="Portfolio of Tamarankuro 'Tammy' Alemu — Fullstack Software Developer specializing in modern web development, backend systems, and scalable solutions. Explore projects, skills, and contact info.">
+  <meta name="keywords" content="Tammyalemu, Tammy Alemu, Tamarankuro Alemu, Software Developer, Fullstack Engineer, Backend Developer, Web Developer, Portfolio, JavaScript Developer, Laravel Developer, React Developer, Nigerian Developer, Software Engineer">
+  <meta name="author" content="Tamarankuro Alemu">
+
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Tamarankuro Alemu",
+    "alternateName": "Tammy Alemu",
+    "url": "https://tami.brimble.app",
+    "sameAs": [
+      "https://tammyalemu.vercel.app",
+      ]
+    "jobTitle": "Software Developer",
+    "description": "Tamarankuro 'Tammy' Alemu is a Fullstack Software Developer specializing in web and backend development. Explore Tammy Alemu’s projects and contact info.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Lagos",
+      "addressCountry": "Nigeria"
+    },
+    "email": "mailto:tammyalemu@gmail.com
+      "addressLocality": "Lagos",
+      "addressCountry": "Nigeria"
+    },
+    "image": "https://tami.brimble.app/meta-image.png",
+    "sameAs": [
+      "https://github.com/tammyalemu",
+      "https://twitter.com/tammyalemu",
+      "https://linkedin.com/in/tammyalemu"
+    ],
+    "jobTitle": "Software Developer",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Freelance"
     }
-  </style>
-</html>
+  }
+  </script>
+
+  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="fonts/fonts.css">
+  <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.1/dist/lenis.css">
+</head>
