--- a/index.html
+++ b/index.html
@@ -72,4 +72,5 @@
   <link href="style.css" rel="stylesheet">
   <link rel="stylesheet" href="fonts/fonts.css">
   <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.1/dist/lenis.css">
+  <meta name="google-site-verification" content="4c5EllURrAWXHs4LkLwGXSyOpTkk4InK-sCqsv61I_k" />
 </head>
