Updated seo from google console

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!doctype html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +16,7 @@
 
   <!-- Canonical and Open Graph -->
   <meta property="og:url" content="https://tami.brimble.app/#contact">
-  <link rel="canonical" href="https://tami.brimble.app/#contact">
+  <link rel="canonical" href="https://tammyalemu.vercel.app/#contact">
   <meta property="og:title" content="Tamarankuro 'Tammy' Alemu | Software Developer Portfolio" />
   <meta property="og:description" content="Fullstack developer specializing in web and backend development. View Tammy Alemu’s projects and contact info." />
   <meta property="og:image" content="https://tami.brimble.app/meta-image.png" />
@@ -32,9 +34,15 @@
   <meta name="description" content="Portfolio of Tamarankuro 'Tammy' Alemu — Fullstack Software Developer specializing in modern web development, backend systems, and scalable solutions. Explore projects, skills, and contact info.">
   <meta name="keywords" content="Tammyalemu, Tammy Alemu, Tamarankuro Alemu, Software Developer, Fullstack Engineer, Backend Developer, Web Developer, Portfolio, JavaScript Developer, Laravel Developer, React Developer, Nigerian Developer, Software Engineer">
   <meta name="author" content="Tamarankuro Alemu">
+  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="fonts/fonts.css">
+  <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.1/dist/lenis.css">
+  <!-- Brimble -->
+  <meta name="google-site-verification" content="4c5EllURrAWXHs4LkLwGXSyOpTkk4InK-sCqsv61I_k" />
+  <!-- vercel -->
+  <meta name="google-site-verification" content="6SsVJGRm2m0sB13_GcLMq39Ib3CJm3Ms_4z3LlOZNlo" />
 
-
-  <script type="application/ld+json">
+<script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "Person",
@@ -42,8 +50,8 @@
     "alternateName": "Tammy Alemu",
     "url": "https://tami.brimble.app",
     "sameAs": [
-      "https://tammyalemu.vercel.app",
-      ]
+      "https://tammyalemu.vercel.app"
+    ],
     "jobTitle": "Software Developer",
     "description": "Tamarankuro 'Tammy' Alemu is a Fullstack Software Developer specializing in web and backend development. Explore Tammy Alemu’s projects and contact info.",
     "address": {
@@ -51,10 +59,7 @@
       "addressLocality": "Lagos",
       "addressCountry": "Nigeria"
     },
-    "email": "mailto:tammyalemu@gmail.com
-      "addressLocality": "Lagos",
-      "addressCountry": "Nigeria"
-    },
+    "email": "mailto:tammyalemu@gmail.com",
     "image": "https://tami.brimble.app/meta-image.png",
     "sameAs": [
       "https://github.com/tammyalemu",
@@ -68,9 +73,9 @@
     }
   }
   </script>
-
-  <link href="style.css" rel="stylesheet">
-  <link rel="stylesheet" href="fonts/fonts.css">
-  <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.1/dist/lenis.css">
-  <meta name="google-site-verification" content="4c5EllURrAWXHs4LkLwGXSyOpTkk4InK-sCqsv61I_k" />
 </head>
+<body class="bg-black text-white font-montserrat">
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+</html>
