--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <link rel="manifest" href="/site.webmanifest">
 
   <!-- Canonical and Open Graph -->
-  <meta property="og:url" content="https://tami.brimble.app/#contact">
+  <meta property="og:url" content="https://tammyalemu.vercel.app/#contact">
   <link rel="canonical" href="https://tammyalemu.vercel.app/#contact">
   <meta property="og:title" content="Tamarankuro 'Tammy' Alemu | Software Developer Portfolio" />
   <meta property="og:description" content="Fullstack developer specializing in web and backend development. View Tammy Alemu’s projects and contact info." />
-  <meta property="og:image" content="https://tami.brimble.app/meta-image.png" />
+  <meta property="og:image" content="https://tammyalemu.vercel.app/meta-image.png" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter -->
@@ -27,7 +27,7 @@
   <meta name="twitter:site" content="@tammyalemu">
   <meta name="twitter:title" content="Tamarankuro 'Tammy' Alemu | Software Developer Portfolio">
   <meta name="twitter:description" content="Explore the portfolio of Tammy Alemu – Fullstack Software Engineer skilled in backend, frontend, and scalable systems.">
-  <meta name="twitter:image" content="https://tami.brimble.app/meta-image.png">
+  <meta name="twitter:image" content="https://tammyalemu.vercel.app/meta-image.png">
 
   <!-- SEO -->
   <title>Tamarankuro "Tammy" Alemu | Software Engineer & Web Developer Portfolio</title>
@@ -37,8 +37,6 @@
   <link href="style.css" rel="stylesheet">
   <link rel="stylesheet" href="fonts/fonts.css">
   <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.1/dist/lenis.css">
-  <!-- Brimble -->
-  <meta name="google-site-verification" content="4c5EllURrAWXHs4LkLwGXSyOpTkk4InK-sCqsv61I_k" />
   <!-- vercel -->
   <meta name="google-site-verification" content="6SsVJGRm2m0sB13_GcLMq39Ib3CJm3Ms_4z3LlOZNlo" />
 
@@ -48,7 +46,7 @@
     "@type": "Person",
     "name": "Tamarankuro Alemu",
     "alternateName": "Tammy Alemu",
-    "url": "https://tami.brimble.app",
+    "url": "https://tammyalemu.vercel.app",
     "sameAs": [
       "https://tammyalemu.vercel.app"
     ],
@@ -60,7 +58,7 @@
       "addressCountry": "Nigeria"
     },
     "email": "mailto:tammyalemu@gmail.com",
-    "image": "https://tami.brimble.app/meta-image.png",
+    "image": "https://tammyalemu.vercel.app/meta-image.png",
     "sameAs": [
       "https://github.com/tammyalemu",
       "https://twitter.com/tammyalemu",
